--- a/projeto1/package.json
+++ b/projeto1/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.2.5",
+    "babel-jest": "^29.3.1",
     "jest": "^29.3.1"
   }
 }
