--- a/projeto1/package.json
+++ b/projeto1/package.json
@@ -16,5 +16,8 @@
     "@types/jest": "^29.2.5",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
