--- a/projeto1/package.json
+++ b/projeto1/package.json
@@ -15,7 +15,8 @@
     "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.2.5",
     "babel-jest": "^29.3.1",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "prettier": "^2.8.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
